fix audio device selector overflow

--- a/js/webui/src/style.less
+++ b/js/webui/src/style.less
@@ -934,6 +934,7 @@ body {
     .setting-editor-range-block,
     .settings-buttons {
         grid-column: 2;
+        min-width: 0;
     }
 
     .setting-editor-enum {
